Drive with okapi lib.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@
 pros/bin/output.bin
 pros/bin/output.elf
 pros/compile_commands.json
+pros/bin/output.bin
+pros/bin/output.elf
+pros/compile_commands.json
